--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY HTML WEBSITE</title>
+    <title>My Restaurant</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-
+       <h1>AK <br><span>Restaurant</span></h1>
+       <p><i>Quality food, Cafe & Restaurant</i> <br></p>
+       <ul>
+        <li><a href="menu.html" target="_blank" title="menu">MENU</a></li>
+        <li><a href="" target="_blank" title="contact us">CONTACT US</a></li>
+        <li><a href="" target="_blank" title="about us">ABOUT US</a></li>
+        <li><a href="" target="_blank" title="term &policy">TERM & POLICY</a></li>
+        <li><a href="form.html" target="_blank" title="term &policy"><button>LOGIN</button></a></li>
+       </ul>
     </header>
     <main>
 
