--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <ul>
         <li><a href="menu.html" target="_blank" title="menu">MENU</a></li>
         <li><a href="" target="_blank" title="contact us">CONTACT US</a></li>
-        <li><a href="" target="_blank" title="about us">ABOUT US</a></li>
+        <li><a href="contact.html" target="_blank" title="about us">ABOUT US</a></li>
         <li><a href="" target="_blank" title="term &policy">TERM & POLICY</a></li>
         <li><a href="form.html" target="_blank" title="term &policy"><button>LOGIN</button></a></li>
        </ul>
