--- a/contact.html
+++ b/contact.html
@@ -3,33 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="shortcut icon" href="images/1946436.png" type="image/x-icon">
     <title>CONTACT US</title>
     <link rel="stylesheet" href="styles/contact.css">
 </head>
 <body>
     <nav class="flex">
-        <div class="img">
-            <img src="images/cover.avif" alt="">
+        <div>
+            <img class="image" src="images/cover.avif" alt="">
         </div>
     <div>
         <h3>AK Restaurant</h3>
     </div>
     </nav>
-    <header>
-        <h3>Delivery Charge Free !</h3>
-        <p>Minimum Order 450 Taka</p>
-        <h3>Delivery charge 50Tk</h3>
-        <p>For all branches</p>
-        <h3>130 Taka OFF!!</h3>
-        <p>Minimum Order 999 Taka</p>
-        <h3>220 Taka OFF!!</h3>
-        <p>Minimum Order 1499 Taka</p>
-    </header>
-    <main>
+   
+    <main style="font-weight: bold; font-size: 20px;">
         <address>
-            Call:017.........
-            Email:Example.com
-            Address:bangladesh
+            Call:017......... <br>
+            Email:Example.com <br>
+            Address:bangladesh <br>
         </address>
     </main>
 </body>
