--- a/form.html
+++ b/form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FORM</title>
+     <link rel="shortcut icon" href="images/1946436.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/form.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
     <section>
         <h1>Picking your path to happy eating</h1>
        <div>
-           <form action="">
+           <form>
             <label for="">NAME:</label>
             <input type="text" name="" id="" placeholder="Your Name" required>
             <br>
@@ -31,6 +32,14 @@
            <b>male</b>
            <br>
            <br>
+           <input type="file" name="" id="">
+           <input type="reset" value="Reset">
+           <select>
+            <option value="Select one">Select one</option>
+            <option value="age=4-5">age=4-5</option>
+            <option value="age=6-12">age=6-12</option>
+            <option value="age=13-20">age=13-20</option>
+           </select>
           <input type="submit" value="Submit">
         </form>
        </div>
