--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Restaurant</title>
+    <link rel="shortcut icon" href="images/1946436.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -12,9 +13,9 @@
        <p><i>Quality food, Cafe & Restaurant</i> <br></p>
        <ul>
         <li><a href="menu.html" target="_blank" title="menu">MENU</a></li>
-        <li><a href="" target="_blank" title="contact us">CONTACT US</a></li>
-        <li><a href="contact.html" target="_blank" title="about us">ABOUT US</a></li>
-        <li><a href="" target="_blank" title="term &policy">TERM & POLICY</a></li>
+        <li><a href="contact.html" target="_blank" title="contact us">CONTACT US</a></li>
+        <li><a href="about.html" target="_blank" title="about us">ABOUT US</a></li>
+        <li><a href="term.html" target="_blank" title="term &policy">TERM & POLICY</a></li>
         <li><a href="form.html" target="_blank" title="term &policy"><button>LOGIN</button></a></li>
        </ul>
     </header>
