--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MENU</title>
+     <link rel="shortcut icon" href="images/1946436.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/menu.css">
 </head>
 <body>
@@ -23,7 +24,13 @@
     </div>
      <div class="item">
         <img src="images/meltCake.avif" alt="">
-        <h3>Burger</h3>
+        <details>
+            <summary>Cake</summary>
+            <ul>
+                <li>vanila</li>
+                <li>chocolate</li>
+            </ul>
+        </details>
         <p>$250</p>
         <button>ADD TO CART</button>
     </div>
@@ -53,12 +60,6 @@
     </div>
      <div class="item">
         <img src="images/dark-chocolate.avif" alt="">
-        <h3>Burger</h3>
-        <p>$250</p>
-        <button>ADD TO CART</button>
-    </div>
-     <div class="item">
-        <img src="images/meltCake.avif" alt="">
         <h3>Burger</h3>
         <p>$250</p>
         <button>ADD TO CART</button>
