--- a/menu.html
+++ b/menu.html
@@ -11,19 +11,19 @@
     <h1 class="center"><strong>RESTAURANT MENU</strong></h1>
    <section class="menu">
      <div class="item">
-        <img src="images/burger.avif" alt="">
+        <img class="image" src="images/burger.avif" alt="">
         <h3>Burger</h3>
         <p>$250</p>
         <button>ADD TO CART</button>
     </div>
      <div class="item">
-        <img src="images//donate.avif" alt="">
+        <img class="image" src="images//donate.avif" alt="">
         <h3>Burger</h3>
         <p>$250</p>
         <button>ADD TO CART</button>
     </div>
-     <div class="item">
-        <img src="images/meltCake.avif" alt="">
+     <div class="item" >
+        <img class="image"src="images/meltCake.avif" alt="">
         <details>
             <summary>Cake</summary>
             <ul>
@@ -35,31 +35,31 @@
         <button>ADD TO CART</button>
     </div>
      <div class="item">
-        <img src="images/pasta.avif" alt="">
+        <img class="image" src="images/pasta.avif" alt="">
         <h3>Burger</h3>
         <p>$250</p>
         <button>ADD TO CART</button>
     </div>
      <div class="item">
-        <img src="images/pizza.avif" alt="">
+        <img class="image" src="images/pizza.avif" alt="">
         <h3>Burger</h3>
         <p>$250</p>
         <button>ADD TO CART</button>
     </div>
      <div class="item">
-        <img src="images/salad.avif" alt="">
+        <img  class="image" src="images/salad.avif" alt="">
         <h3>Burger</h3>
         <p>$250</p>
         <button>ADD TO CART</button>
     </div>
      <div class="item">
-        <img src="images/noodle.avif" alt="">
+        <img  class="image" src="images/noodle.avif" alt="">
         <h3>Burger</h3>
         <p>$250</p>
         <button>ADD TO CART</button>
     </div>
      <div class="item">
-        <img src="images/dark-chocolate.avif" alt="">
+        <img class="image"  src="images/dark-chocolate.avif" alt="">
         <h3>Burger</h3>
         <p>$250</p>
         <button>ADD TO CART</button>
