--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
     <H1>FOOD ORDER FORM</H1>
     <section>
         <h1>Picking your path to happy eating</h1>
-       <div>
+       <div class="form">
            <form>
             <label for="">NAME:</label>
             <input type="text" name="" id="" placeholder="Your Name" required>
